kubernetes/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  labels:
    app: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
      - name: admin
        image: medisync-admin:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5174
---
apiVersion: v1
kind: Service
metadata:
  name: admin
spec:
  selector:
    app: admin
  ports:
  - protocol: TCP
    port: 5174
    targetPort: 5174
  type: LoadBalancer
