kubernetes/appointment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-service
  labels:
    app: appointment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment-service
  template:
    metadata:
      labels:
        app: appointment-service
    spec:
      containers:
      - name: appointment-service
        image: medisync-appointment-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8004
---
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
spec:
  selector:
    app: appointment-service
  ports:
  - protocol: TCP
    port: 8004
    targetPort: 8004
  type: ClusterIP
