kubernetes/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: medisync-client:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  selector:
    app: client
  ports:
  - protocol: TCP
    port: 5173
    targetPort: 5173
  type: LoadBalancer
