kubernetes/telemedicine-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemedicine-service
  labels:
    app: telemedicine-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telemedicine-service
  template:
    metadata:
      labels:
        app: telemedicine-service
    spec:
      containers:
      - name: telemedicine-service
        image: medisync-telemedicine-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8007
---
apiVersion: v1
kind: Service
metadata:
  name: telemedicine-service
spec:
  selector:
    app: telemedicine-service
  ports:
  - protocol: TCP
    port: 8007
    targetPort: 8007
  type: ClusterIP
